--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 10:00+0200\n"
+"PO-Revision-Date: 2010-08-20 10:01+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -3418,10 +3418,9 @@ msgid "Invalid parameter for CSV import: %s"
 msgstr "Negalimas parametras CSV importavimui: %s"
 
 #: libraries/import/csv.php:61 libraries/import/ldi.php:40
-#, fuzzy
 #| msgid "Lines terminated by"
 msgid "Columns terminated by"
-msgstr "Eilutės pabaigos žymė"
+msgstr "Laukų pabaigos žymė"
 
 #: libraries/import/csv.php:73 libraries/import/ldi.php:41
 #| msgid "Fields enclosed by"
