--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 10:11+0200\n"
+"PO-Revision-Date: 2010-08-20 10:12+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -3560,7 +3560,7 @@ msgstr "Bulgarų"
 
 #: libraries/mysql_charsets.lib.php:218 libraries/mysql_charsets.lib.php:343
 msgid "Simplified Chinese"
-msgstr "Supaprastinta kiniečių"
+msgstr "Supaprastinta kinų"
 
 #: libraries/mysql_charsets.lib.php:220 libraries/mysql_charsets.lib.php:363
 msgid "Traditional Chinese"
