Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 10:14+0200\n"
+"PO-Revision-Date: 2010-08-20 10:15+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -3787,7 +3787,7 @@ msgstr "Išvesti stulpelių komentarus"
 msgid ""
 "Please see the documentation on how to update your column_comments table"
 msgstr ""
-"Informaciją, kaip atnaujinti Column_comments lentelę, galite rasti "
+"Informaciją, kaip atnaujinti column_comments lentelę, galite rasti "
 "dokumentacijoje."
 
 #: libraries/relation.lib.php:125 libraries/sql_query_form.lib.php:403
