Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 10:15+0200\n"
+"PO-Revision-Date: 2010-08-20 10:16+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -3800,7 +3800,7 @@ msgstr "SQL užklausų istorija"
 
 #: libraries/relation.lib.php:141
 msgid "Quick steps to setup advanced features:"
-msgstr ""
+msgstr "Greiti žingsneliai nustatyti išplėstines galimybes:"
 
 #: libraries/relation.lib.php:143
 msgid ""
