Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 10:20+0200\n"
+"PO-Revision-Date: 2010-08-20 10:21+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -4198,7 +4198,7 @@ msgstr "ENUM arba SET duomenys per ilgi?"
 
 #: libraries/tbl_properties.inc.php:373
 msgid "Get more editing space"
-msgstr "Padidinti redagavimo vietą"
+msgstr "Padidinti redagavimo erdvę"
 
 #: libraries/tbl_properties.inc.php:396
 #, fuzzy
