--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 10:24+0200\n"
+"PO-Revision-Date: 2010-08-20 10:25+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -4429,10 +4429,9 @@ msgid "Error in ZIP archive:"
 msgstr "Klaida ZIP archyve:"
 
 #: main.php:66
-#, fuzzy
 #| msgid "General relation features"
 msgid "General Settings"
-msgstr "Pagrindinės sąryšių sąvybės"
+msgstr "Pagrindiniai nustatymai"
 
 #: main.php:97
 msgid "MySQL connection collation"
