--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 10:25+0200\n"
+"PO-Revision-Date: 2010-08-20 10:26+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -4448,7 +4448,7 @@ msgstr "Fono spalva"
 
 #: main.php:133
 msgid "Choose..."
-msgstr ""
+msgstr "Pasirinkti..."
 
 #: main.php:137 pdf_pages.php:361 setup/lib/FormDisplay.tpl.php:216
 #: tbl_change.php:1071
