Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 10:26+0200\n"
+"PO-Revision-Date: 2010-08-20 10:27+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -4495,7 +4495,7 @@ msgstr "Oficialus phpMyAdmin tinklalapis"
 
 #: main.php:212
 msgid "Mailing lists"
-msgstr ""
+msgstr "El. pašto grupė"
 
 #: main.php:238
 msgid ""
