--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 10:31+0200\n"
+"PO-Revision-Date: 2010-08-20 10:32+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -4583,7 +4583,7 @@ msgstr ""
 
 #: navigation.php:60 navigation.php:61 navigation.php:64
 msgid "Reload navigation frame"
-msgstr ""
+msgstr "Atsiųsti iš naujo navigacijos rėmelį"
 
 #: navigation.php:203 server_databases.php:368 server_synchronize.php:1189
 msgid "No databases"
