Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 10:32+0200\n"
+"PO-Revision-Date: 2010-08-20 10:34+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -4628,10 +4628,9 @@ msgid "Page name"
 msgstr "Puslapis:"
 
 #: pdf_pages.php:312
-#, fuzzy
 #| msgid "Automatic layout"
 msgid "Automatic layout based on"
-msgstr "Automatinis išdėstymas"
+msgstr "Automatinis išdėstymas paremtas"
 
 #: pdf_pages.php:314
 msgid "Internal relations"
