Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 10:34+0200\n"
+"PO-Revision-Date: 2010-08-20 10:35+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -4671,7 +4671,7 @@ msgstr "Duombazės %s schema - %s puslapis"
 
 #: pdf_schema.php:1011
 msgid "No tables"
-msgstr "No tables"
+msgstr "Jokių lentelių"
 
 #: pdf_schema.php:1030 pdf_schema.php:1139
 msgid "Relational schema"
