Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 10:35+0200\n"
+"PO-Revision-Date: 2010-08-20 10:36+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -4688,7 +4688,7 @@ msgstr "Papildomai"
 
 #: pmd_general.php:63
 msgid "Show/Hide left menu"
-msgstr ""
+msgstr "Rodyti/slėpti kairį meniu"
 
 #: pmd_general.php:67
 msgid "Save position"
