--- a/po/lt.po
+++ b/po/lt.po
@@ -4699,9 +4699,8 @@ msgid "Create table"
 msgstr "Sukurti lentelę"
 
 #: pmd_general.php:73 pmd_general.php:305
-#, fuzzy
 msgid "Create relation"
-msgstr "Paskutinė versija"
+msgstr "Sukurti sąryšį"
 
 #: pmd_general.php:79
 msgid "Reload"
