--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 10:39+0200\n"
+"PO-Revision-Date: 2010-08-20 10:41+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -4729,7 +4729,7 @@ msgstr "Maži/Dideli visi"
 
 #: pmd_general.php:98
 msgid "Toggle small/big"
-msgstr "Suskleisti mažas/didelis"
+msgstr "Suskleisti/Išskleisti"
 
 #: pmd_general.php:103
 msgid "Import/Export coordinates for PDF schema"
