--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 10:45+0200\n"
+"PO-Revision-Date: 2010-08-20 10:46+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -4772,7 +4772,7 @@ msgstr "Puslapis sukurtas"
 
 #: pmd_pdf.php:62
 msgid "Page creation failed"
-msgstr ""
+msgstr "Puslapio kūrimas nepavyko"
 
 #: pmd_pdf.php:82
 msgid "Export/Import to scale"
