--- a/po/lt.po
+++ b/po/lt.po
@@ -4780,7 +4780,7 @@ msgstr ""
 
 #: pmd_pdf.php:86
 msgid "recommended"
-msgstr ""
+msgstr "rekomenduojame"
 
 #: pmd_pdf.php:91
 msgid "to/from page"
