--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 10:49+0200\n"
+"PO-Revision-Date: 2010-08-20 10:50+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -4868,10 +4868,9 @@ msgid "Not replicated"
 msgstr "Nepadaugintas"
 
 #: server_databases.php:270
-#, fuzzy
 #| msgid "Replication"
 msgid "Replicated"
-msgstr "Replikacija"
+msgstr "Padaugintas"
 
 #: server_databases.php:286
 #, php-format
