--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 10:50+0200\n"
+"PO-Revision-Date: 2010-08-20 10:52+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -4916,9 +4916,8 @@ msgstr "Leisti keisti jau egzistuojančių lenetelių struktūrą."
 
 #: server_privileges.php:25 server_privileges.php:207
 #: server_privileges.php:520
-#, fuzzy
 msgid "Allows altering and dropping stored routines."
-msgstr "Leisti įterpti ir modifikuoti indeksus."
+msgstr "Leisti keisti pašalinti saugimas programas (stored routines)."
 
 #: server_privileges.php:26 server_privileges.php:183
 #: server_privileges.php:513
