--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 10:54+0200\n"
+"PO-Revision-Date: 2010-08-20 10:55+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -4966,7 +4966,7 @@ msgstr "Leisti šalinti lenteles."
 #: server_privileges.php:35 server_privileges.php:199
 #: server_privileges.php:533
 msgid "Allows to set up events for the event scheduler"
-msgstr ""
+msgstr "Leisti nustatyti įvykius įvykių planuoklei (scheduler)"
 
 #: server_privileges.php:36 server_privileges.php:209
 #: server_privileges.php:521
