--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 10:55+0200\n"
+"PO-Revision-Date: 2010-08-20 10:56+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -4970,9 +4970,8 @@ msgstr "Leisti nustatyti įvykius įvykių planuoklėje (scheduler)"
 
 #: server_privileges.php:36 server_privileges.php:209
 #: server_privileges.php:521
-#, fuzzy
 msgid "Allows executing stored routines."
-msgstr "Leidžia sukurti naujus view'us."
+msgstr "Leisti įvykdyti saugomas programas (stored routines)."
 
 #: server_privileges.php:37 server_privileges.php:188
 #: server_privileges.php:508
