--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 10:56+0200\n"
+"PO-Revision-Date: 2010-08-20 11:01+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -5023,7 +5023,7 @@ msgstr ""
 #: server_privileges.php:653
 #, fuzzy
 msgid "Limits the number of simultaneous connections the user may have."
-msgstr "Riboti prisijungimų kiekį per valandą."
+msgstr "Riboti prisijungimų kiekį per valandą (gal labiau kartu vykstančių)."
 
 #: server_privileges.php:46 server_privileges.php:187
 #: server_privileges.php:543
