--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 11:02+0200\n"
+"PO-Revision-Date: 2010-08-20 11:03+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -5086,9 +5086,8 @@ msgstr ""
 
 #: server_privileges.php:56 server_privileges.php:200
 #: server_privileges.php:534
-#, fuzzy
 msgid "Allows creating and dropping triggers"
-msgstr "Leisti įterpti ir modifikuoti indeksus."
+msgstr "Leisti įterpti ir pašalinti trigerius."
 
 #: server_privileges.php:57 server_privileges.php:181
 #: server_privileges.php:444 server_privileges.php:504
