bug #3042495 [core] Move PMA_sendHeaderLocation to core.lib.php.
It might be needed from common.inc.php even if PMA_MINIMUM_COMMON is
defined.

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug [doc] Withdraw or edit FAQ entries related to older MySQL or PHP 
 - bug #3042706 [pmadb] Relations, bookmarks, etc deleted after table drop
 - bug #3044189 [doc] Cleared documentation for hide_db.
+- bug #3042495 [core] Move PMA_sendHeaderLocation to core.lib.php.
 
 3.3.5.0 (2010-07-26)
 - patch #2932113 [information_schema] Slow export when having lots of
