--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 11:13+0200\n"
+"PO-Revision-Date: 2010-08-20 11:15+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -5340,7 +5340,7 @@ msgstr "pakaitos simbolis"
 #: server_processlist.php:21
 #, php-format
 msgid "Thread %s was successfully killed."
-msgstr "%s buvo sėkmingai išjungtas."
+msgstr "Gija %s buvo sėkmingai išjungta."
 
 #: server_processlist.php:23
 #, php-format
