Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -5462,7 +5462,7 @@ msgstr ""
 
 #: server_replication.php:323
 msgid "Full start"
-msgstr ""
+msgstr "Pilnas įjungimas"
 
 #: server_replication.php:323
 #, fuzzy
