--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 11:20+0200\n"
+"PO-Revision-Date: 2010-08-20 11:21+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -5469,7 +5469,7 @@ msgstr "Pilnas išjungimas"
 
 #: server_replication.php:324
 msgid "Reset slave"
-msgstr ""
+msgstr "paleisti iš naujo pavaldųjį serverį (reset slave)"
 
 #: server_replication.php:325
 #, php-format
