--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 11:22+0200\n"
+"PO-Revision-Date: 2010-08-20 11:23+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -5474,7 +5474,7 @@ msgstr "Paleisti iš naujo pavaldųjį serverį (reset slave)"
 #: server_replication.php:325
 #, php-format
 msgid "SQL Thread %s only"
-msgstr ""
+msgstr "Tik SQL gija %s"
 
 #: server_replication.php:325 server_replication.php:326
 msgid "Start"
